--- a/apple/.gitignore
+++ b/apple/.gitignore
@@ -1,10 +1,6 @@
-/Cargo.lock
 /external/SDL2.zip
 /external/SDL2
-/external/libEGL.dylib
-/external/libGLESv2.dylib
 *.xcuserstate
-xcuserdata
-*.xcscheme
 /external/macos_fat.zip
 /webrogue.xcodeproj
+*.xcbkptlist
