apple fixes and highdpi

--- a/crates/backend_wasmtime/Cargo.toml
+++ b/crates/backend_wasmtime/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-wasmtime = { path = "../../external/wasmtime/crates/wasmtime" }
+# All default but async and profiling features
+wasmtime = { path = "../../external/wasmtime/crates/wasmtime", default-features = false, features = ["cache", "gc", "wat", "parallel-compilation", "cranelift", "pooling-allocator", "demangle", "addr2line", "coredump", "debug-builtins", "runtime", "component-model", "threads", "std"] }
 webrogue_runtime = { path = "../runtime"}
 anyhow = { version = "1" }
 webrogue_backend_wasmtime_macro = { path = "macro" }
