--- a/crates/gfx/defs.in
+++ b/crates/gfx/defs.in
@@ -2,3 +2,5 @@ make_window() -> ()
 present() -> ()
 get_window_width() -> (u32)
 get_window_height() -> (u32)
+get_gl_width() -> (u32)
+get_gl_height() -> (u32)
