--- a/.github/workflows/dry_run.yml
+++ b/.github/workflows/dry_run.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Build for macOS
       shell: sh # does not works on zsh
       run: |
-        XCODEBUILD_FLAGS="-destination generic/platform=macOS -workspace apple/webrogue.xcworkspace -scheme MacOS_Release -configuration Release"
+        XCODEBUILD_FLAGS="-destination generic/platform=macOS -workspace apple/webrogue.xcworkspace -scheme MacOS_ReleaseLocal -configuration ReleaseLocal"
         XC_BUILD_DIR=$(xcodebuild $XCODEBUILD_FLAGS -showBuildSettings | grep -m 1 "BUILT_PRODUCTS_DIR =" | grep -oEi "\/.*" || exit 3)
         xcodebuild $XCODEBUILD_FLAGS -parallelizeTargets
         du -h -d 0 $XC_BUILD_DIR/webrogue\ Launcher.app
@@ -41,11 +41,11 @@ jobs:
       run: |
         brew install xcodegen
         sh apple/setup.command
-        
+
     - name: Build for iOS
       shell: sh # does not works on zsh
       run: |
-        XCODEBUILD_FLAGS="-destination generic/platform=iOS -workspace apple/webrogue.xcworkspace -scheme iOS_Release -configuration Release"
+        XCODEBUILD_FLAGS="-destination generic/platform=iOS -workspace apple/webrogue.xcworkspace -scheme iOS_ReleaseLocal -configuration ReleaseLocal"
         XC_BUILD_DIR=$(xcodebuild $XCODEBUILD_FLAGS -showBuildSettings | grep -m 1 "BUILT_PRODUCTS_DIR =" | grep -oEi "\/.*" || exit 3)
         xcodebuild $XCODEBUILD_FLAGS -parallelizeTargets
         du -h -d 0 $XC_BUILD_DIR/webrogue.app 
