--- a/.github/workflows/dry_run.yml
+++ b/.github/workflows/dry_run.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         XCODEBUILD_FLAGS="-destination generic/platform=macOS -workspace apple/webrogue.xcworkspace -scheme MacOS_ReleaseLocal -configuration ReleaseLocal"
         XC_BUILD_DIR=$(xcodebuild $XCODEBUILD_FLAGS -showBuildSettings | grep -m 1 "BUILT_PRODUCTS_DIR =" | grep -oEi "\/.*" || exit 3)
-        xcodebuild $XCODEBUILD_FLAGS -parallelizeTargets
+        xcodebuild $XCODEBUILD_FLAGS -parallelizeTargets -allowProvisioningUpdates
         du -h -d 0 $XC_BUILD_DIR/webrogue\ Launcher.app
 
   ios:
@@ -47,5 +47,5 @@ jobs:
       run: |
         XCODEBUILD_FLAGS="-destination generic/platform=iOS -workspace apple/webrogue.xcworkspace -scheme iOS_ReleaseLocal -configuration ReleaseLocal"
         XC_BUILD_DIR=$(xcodebuild $XCODEBUILD_FLAGS -showBuildSettings | grep -m 1 "BUILT_PRODUCTS_DIR =" | grep -oEi "\/.*" || exit 3)
-        xcodebuild $XCODEBUILD_FLAGS -parallelizeTargets
+        xcodebuild $XCODEBUILD_FLAGS -parallelizeTargets -allowProvisioningUpdates
         du -h -d 0 $XC_BUILD_DIR/webrogue.app 
