--- a/.github/workflows/dry_run.yml
+++ b/.github/workflows/dry_run.yml
@@ -16,10 +16,12 @@ jobs:
     
     - name: Setup
       run: |
+        rustup target add x86_64-apple-darwin
+        rustup target add aarch64-apple-darwin
         brew install xcodegen
         sh apple/setup.command
 
-    - name: Build for macOS
+    - name: Build
       shell: sh # does not works on zsh
       run: |
         XCODEBUILD_FLAGS="-destination generic/platform=macOS -workspace apple/webrogue.xcworkspace -scheme MacOS_ReleaseLocal -configuration ReleaseLocal"
@@ -39,13 +41,17 @@ jobs:
     
     - name: Setup
       run: |
+        rustup target add aarch64-apple-ios
+        rustup target add x86_64-apple-ios
+        rustup target add aarch64-apple-ios-sim
         brew install xcodegen
         sh apple/setup.command
 
-    - name: Build for iOS
+    - name: Build
       shell: sh # does not works on zsh
       run: |
-        XCODEBUILD_FLAGS="-destination generic/platform=iOS -workspace apple/webrogue.xcworkspace -scheme iOS_ReleaseLocal -configuration ReleaseLocal"
-        XC_BUILD_DIR=$(xcodebuild $XCODEBUILD_FLAGS -showBuildSettings | grep -m 1 "BUILT_PRODUCTS_DIR =" | grep -oEi "\/.*" || exit 3)
-        xcodebuild $XCODEBUILD_FLAGS -parallelizeTargets -allowProvisioningUpdates
+        XCODEBUILD_FLAGS="-workspace apple/webrogue.xcworkspace -scheme iOS_ReleaseLocal -configuration ReleaseLocal -destination"
+        XCODEBUILD_DESTINATION_FLAGS="generic/platform=iOS Simulator"
+        XC_BUILD_DIR=$(xcodebuild $XCODEBUILD_FLAGS "$XCODEBUILD_DESTINATION_FLAGS" -showBuildSettings | grep -m 1 "BUILT_PRODUCTS_DIR =" | grep -oEi "\/.*" || exit 3)
+        xcodebuild $XCODEBUILD_FLAGS "$XCODEBUILD_DESTINATION_FLAGS" -parallelizeTargets -allowProvisioningUpdates
         du -h -d 0 $XC_BUILD_DIR/webrogue.app 
