--- a/web/.cargo/config.toml
+++ b/web/.cargo/config.toml
@@ -2,4 +2,8 @@
 # target = "wasm32-unknown-emscripten"
 
 [target.wasm32-unknown-emscripten]
-rustflags = ["-Ctarget-feature=+atomics,+bulk-memory,+mutable-globals"]
+#rustflags = ["-Ctarget-feature=+atomics,+bulk-memory,+mutable-globals"]
+rustflags = [
+    "-Ctarget-feature=+mutable-globals",
+    "--codegen", "panic=abort"
+]
