--- a/android/app/src/main/cpp/CMakeLists.txt
+++ b/android/app/src/main/cpp/CMakeLists.txt
@@ -32,6 +32,7 @@ add_subdirectory("${WEBROGUE_SDL_DIR}" SDL2)
 add_library(
     webrogue SHARED
     webrogue_runtime.cpp
+    ../../../../../crates/gfx_ffi/src/webrogue_gfx_ffi_sdl2.c
 )
 
 if(CMAKE_SYSTEM_PROCESSOR MATCHES "^(arm64|aarch64)")
