--- a/.github/workflows/dry_build.yml
+++ b/.github/workflows/dry_build.yml
@@ -65,6 +65,7 @@ jobs:
     
     - name: Setup
       run: |
+        rustup toolchain install nightly-x86_64-unknown-linux-gnu
         git clone https://github.com/emscripten-core/emsdk.git
         ./emsdk/emsdk install latest
         ./emsdk/emsdk activate latest
