--- a/.github/workflows/dry_build.yml
+++ b/.github/workflows/dry_build.yml
@@ -63,6 +63,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Submodules
+      run: |
+        git submodule update --init external/wasmtime
+
     - name: Setup
       run: |
         rustup toolchain install nightly-x86_64-unknown-linux-gnu
