--- a/.github/workflows/dry_build.yml
+++ b/.github/workflows/dry_build.yml
@@ -70,6 +70,7 @@ jobs:
     - name: Setup
       run: |
         rustup toolchain install nightly-x86_64-unknown-linux-gnu
+        rustup component add rust-src --toolchain nightly-x86_64-unknown-linux-gnu
         git clone https://github.com/emscripten-core/emsdk.git
         ./emsdk/emsdk install latest
         ./emsdk/emsdk activate latest
