--- a/.github/workflows/dry_build.yml
+++ b/.github/workflows/dry_build.yml
@@ -69,11 +69,15 @@ jobs:
 
     - name: Setup
       run: |
-        rustup toolchain install nightly-x86_64-unknown-linux-gnu
-        rustup component add rust-src --toolchain nightly-x86_64-unknown-linux-gnu
+        rustup toolchain install nightly
+        rustup component add rust-src --toolchain nightly
         git clone https://github.com/emscripten-core/emsdk.git
         ./emsdk/emsdk install latest
         ./emsdk/emsdk activate latest
+
+    - name: Build Wrapps
+      run: |
+        make -C examples
 
     - name: Build
       run: |
@@ -101,6 +105,10 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: '17'
+
+    - name: Build Wrapps
+      run: |
+        make -C examples
 
     - name: Build
       run: |
