--- a/.github/workflows/dry_build.yml
+++ b/.github/workflows/dry_build.yml
@@ -66,6 +66,7 @@ jobs:
     - name: Submodules
       run: |
         git submodule update --init external/wasmtime
+        git submodule update --init --single-branch examples
 
     - name: Setup
       run: |
@@ -94,6 +95,7 @@ jobs:
     - name: Submodules
       run: |
         git submodule update --init --single-branch external/wasmtime
+        git submodule update --init --single-branch examples
     
     - name: Setup
       run: |
