--- a/.github/workflows/dry_build.yml
+++ b/.github/workflows/dry_build.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Submodules
       run: |
         git submodule update --init external/wasmtime
-        git submodule update --init --single-branch examples
+        git submodule update --init --recursive --single-branch examples
 
     - name: Setup
       run: |
@@ -95,7 +95,7 @@ jobs:
     - name: Submodules
       run: |
         git submodule update --init --single-branch external/wasmtime
-        git submodule update --init --single-branch examples
+        git submodule update --init --recursive --single-branch examples
     
     - name: Setup
       run: |
