wrapp storage for android and icon fix

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -44,19 +44,23 @@
         <activity
             android:name=".WebrogueLauncherActivity"
             android:exported="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:launchMode="singleInstancePerTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.RUN"/>
+                <action android:name="android.intent.action.OPEN_DOCUMENT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <data android:scheme="content"/>
                 <data android:scheme="file"/>
                 <data android:mimeType="application/octet-stream"/>
-                <data android:pathSuffix =".wrmod"/>
+                <data android:pathPattern="*.wrmod"/>
+<!--                <data android:pathSuffix =".wrmod"/>-->
             </intent-filter>
 
             <meta-data
@@ -67,11 +71,12 @@
          Example of setting SDL hints from AndroidManifest.xml:
         <meta-data android:name="SDL_ENV.SDL_ACCELEROMETER_AS_JOYSTICK" android:value="0"/>
         -->
+        <!--            -->
         <activity
             android:name=".WebrogueActivity"
             android:alwaysRetainTaskState="true"
             android:configChanges="layoutDirection|locale|orientation|uiMode|screenLayout|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation"
-            android:exported="true"
+            android:exported="false"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:process=":WebrogueRuntimeProcess"
             android:launchMode="singleInstancePerTask"
