add some gles extensions

--- a/crates/gl/defs.in
+++ b/crates/gl/defs.in
@@ -8,6 +8,7 @@ glBindBuffer(u32, u32) -> ()
 glBindFramebuffer(u32, u32) -> ()
 glBindRenderbuffer(u32, u32) -> ()
 glBindTexture(u32, u32) -> ()
+glBindVertexArrayOES(u32) -> ()
 glBlendColor(f32, f32, f32, f32) -> ()
 glBlendEquation(u32) -> ()
 glBlendEquationSeparate(u32, u32) -> ()
@@ -35,6 +36,7 @@ glDeleteProgram(u32) -> ()
 glDeleteRenderbuffers(i32, u32) -> ()
 glDeleteShader(u32) -> ()
 glDeleteTextures(i32, u32) -> ()
+glDeleteVertexArraysOES(i32, u32) -> ()
 glDepthFunc(u32) -> ()
 glDepthMask(u32) -> ()
 glDepthRangef(f32, f32) -> ()
@@ -54,6 +56,7 @@ glGenBuffers(i32, u32) -> ()
 glGenFramebuffers(i32, u32) -> ()
 glGenRenderbuffers(i32, u32) -> ()
 glGenTextures(i32, u32) -> ()
+glGenVertexArraysOES(i32, u32) -> ()
 glGenerateMipmap(u32) -> ()
 glGetActiveAttrib(u32, u32, i32, u32, u32, u32, u32) -> ()
 glGetActiveUniform(u32, u32, i32, u32, u32, u32, u32) -> ()
@@ -88,6 +91,7 @@ glIsProgram(u32) -> (u32)
 glIsRenderbuffer(u32) -> (u32)
 glIsShader(u32) -> (u32)
 glIsTexture(u32) -> (u32)
+glIsVertexArrayOES(u32) -> (u32)
 glLineWidth(f32) -> ()
 glLinkProgram(u32) -> ()
 glPixelStorei(u32, i32) -> ()
