--- a/apple/.gitignore
+++ b/apple/.gitignore
@@ -1,5 +1,7 @@
 /external/SDL2.zip
 /external/SDL2
+/external/libEGL.xcframework
+/external/libGLESv2.xcframework
 *.xcuserstate
 /external/macos_fat.zip
 /webrogue.xcodeproj
