--- a/crates/gl/defs.in
+++ b/crates/gl/defs.in
@@ -1,41 +1,63 @@
-glGetStringData(u32, u32) -> ()
-glGetStringLen(u32) -> (i32)
+glGetStringData(i32, u32, u32) -> ()
+glGetStringLen(i32, u32) -> (i32)
 init_ptrs() -> ()
 glActiveTexture(u32) -> ()
 glAttachShader(u32, u32) -> ()
+glBeginQuery(u32, u32) -> ()
+glBeginTransformFeedback(u32) -> ()
 glBindAttribLocation(u32, u32, u32) -> ()
 glBindBuffer(u32, u32) -> ()
+glBindBufferBase(u32, u32, u32) -> ()
+glBindBufferRange(u32, u32, u32, i32, i32) -> ()
 glBindFramebuffer(u32, u32) -> ()
 glBindRenderbuffer(u32, u32) -> ()
+glBindSampler(u32, u32) -> ()
 glBindTexture(u32, u32) -> ()
+glBindTransformFeedback(u32, u32) -> ()
+glBindVertexArray(u32) -> ()
 glBindVertexArrayOES(u32) -> ()
 glBlendColor(f32, f32, f32, f32) -> ()
 glBlendEquation(u32) -> ()
 glBlendEquationSeparate(u32, u32) -> ()
 glBlendFunc(u32, u32) -> ()
 glBlendFuncSeparate(u32, u32, u32, u32) -> ()
+glBlitFramebuffer(i32, i32, i32, i32, i32, i32, i32, i32, u32, u32) -> ()
 glBufferData(u32, i32, u32, u32) -> ()
 glBufferSubData(u32, i32, i32, u32) -> ()
 glCheckFramebufferStatus(u32) -> (u32)
 glClear(u32) -> ()
+glClearBufferfi(u32, i32, f32, i32) -> ()
+glClearBufferfv(u32, i32, u32) -> ()
+glClearBufferiv(u32, i32, u32) -> ()
+glClearBufferuiv(u32, i32, u32) -> ()
 glClearColor(f32, f32, f32, f32) -> ()
 glClearDepthf(f32) -> ()
 glClearStencil(i32) -> ()
+glClientWaitSync(u32, u32, u64) -> (u32)
 glColorMask(u32, u32, u32, u32) -> ()
 glCompileShader(u32) -> ()
 glCompressedTexImage2D(u32, i32, u32, i32, i32, i32, i32, u32) -> ()
+glCompressedTexImage3D(u32, i32, u32, i32, i32, i32, i32, i32, u32) -> ()
 glCompressedTexSubImage2D(u32, i32, i32, i32, i32, i32, u32, i32, u32) -> ()
+glCompressedTexSubImage3D(u32, i32, i32, i32, i32, i32, i32, i32, u32, i32, u32) -> ()
+glCopyBufferSubData(u32, u32, i32, i32, i32) -> ()
 glCopyTexImage2D(u32, i32, u32, i32, i32, i32, i32, i32) -> ()
 glCopyTexSubImage2D(u32, i32, i32, i32, i32, i32, i32, i32) -> ()
+glCopyTexSubImage3D(u32, i32, i32, i32, i32, i32, i32, i32, i32) -> ()
 glCreateProgram() -> (u32)
 glCreateShader(u32) -> (u32)
 glCullFace(u32) -> ()
 glDeleteBuffers(i32, u32) -> ()
 glDeleteFramebuffers(i32, u32) -> ()
 glDeleteProgram(u32) -> ()
+glDeleteQueries(i32, u32) -> ()
 glDeleteRenderbuffers(i32, u32) -> ()
+glDeleteSamplers(i32, u32) -> ()
 glDeleteShader(u32) -> ()
+glDeleteSync(u32) -> ()
 glDeleteTextures(i32, u32) -> ()
+glDeleteTransformFeedbacks(i32, u32) -> ()
+glDeleteVertexArrays(i32, u32) -> ()
 glDeleteVertexArraysOES(i32, u32) -> ()
 glDepthFunc(u32) -> ()
 glDepthMask(u32) -> ()
@@ -44,62 +66,115 @@ glDetachShader(u32, u32) -> ()
 glDisable(u32) -> ()
 glDisableVertexAttribArray(u32) -> ()
 glDrawArrays(u32, i32, i32) -> ()
+glDrawArraysInstanced(u32, i32, i32, i32) -> ()
+glDrawBuffers(i32, u32) -> ()
 glDrawElements(u32, i32, u32, u32) -> ()
+glDrawElementsInstanced(u32, i32, u32, u32, i32) -> ()
+glDrawRangeElements(u32, u32, u32, i32, u32, u32) -> ()
 glEnable(u32) -> ()
 glEnableVertexAttribArray(u32) -> ()
+glEndQuery(u32) -> ()
+glEndTransformFeedback() -> ()
+glFenceSync(u32, u32) -> (u32)
 glFinish() -> ()
 glFlush() -> ()
+glFlushMappedBufferRange(u32, i32, i32) -> ()
 glFramebufferRenderbuffer(u32, u32, u32, u32) -> ()
 glFramebufferTexture2D(u32, u32, u32, u32, i32) -> ()
+glFramebufferTextureLayer(u32, u32, u32, i32, i32) -> ()
 glFrontFace(u32) -> ()
 glGenBuffers(i32, u32) -> ()
 glGenFramebuffers(i32, u32) -> ()
+glGenQueries(i32, u32) -> ()
 glGenRenderbuffers(i32, u32) -> ()
+glGenSamplers(i32, u32) -> ()
 glGenTextures(i32, u32) -> ()
+glGenTransformFeedbacks(i32, u32) -> ()
+glGenVertexArrays(i32, u32) -> ()
 glGenVertexArraysOES(i32, u32) -> ()
 glGenerateMipmap(u32) -> ()
 glGetActiveAttrib(u32, u32, i32, u32, u32, u32, u32) -> ()
 glGetActiveUniform(u32, u32, i32, u32, u32, u32, u32) -> ()
+glGetActiveUniformBlockName(u32, u32, i32, u32, u32) -> ()
+glGetActiveUniformBlockiv(u32, u32, u32, u32) -> ()
+glGetActiveUniformsiv(u32, i32, u32, u32, u32) -> ()
 glGetAttachedShaders(u32, i32, u32, u32) -> ()
 glGetAttribLocation(u32, u32) -> (i32)
 glGetBooleanv(u32, u32) -> ()
+glGetBufferParameteri64v(u32, u32, u32) -> ()
 glGetBufferParameteriv(u32, u32, u32) -> ()
+glGetBufferPointerv(u32, u32, u32) -> ()
 glGetError() -> (u32)
 glGetFloatv(u32, u32) -> ()
+glGetFragDataLocation(u32, u32) -> (i32)
 glGetFramebufferAttachmentParameteriv(u32, u32, u32, u32) -> ()
+glGetInteger64i_v(u32, u32, u32) -> ()
+glGetInteger64v(u32, u32) -> ()
+glGetIntegeri_v(u32, u32, u32) -> ()
 glGetIntegerv(u32, u32) -> ()
+glGetInternalformativ(u32, u32, u32, i32, u32) -> ()
+glGetProgramBinary(u32, i32, u32, u32, u32) -> ()
 glGetProgramInfoLog(u32, i32, u32, u32) -> ()
 glGetProgramiv(u32, u32, u32) -> ()
+glGetQueryObjectuiv(u32, u32, u32) -> ()
+glGetQueryiv(u32, u32, u32) -> ()
 glGetRenderbufferParameteriv(u32, u32, u32) -> ()
+glGetSamplerParameterfv(u32, u32, u32) -> ()
+glGetSamplerParameteriv(u32, u32, u32) -> ()
 glGetShaderInfoLog(u32, i32, u32, u32) -> ()
 glGetShaderPrecisionFormat(u32, u32, u32, u32) -> ()
 glGetShaderSource(u32, i32, u32, u32) -> ()
 glGetShaderiv(u32, u32, u32) -> ()
+glGetSynciv(u32, u32, i32, u32, u32) -> ()
 glGetTexParameterfv(u32, u32, u32) -> ()
 glGetTexParameteriv(u32, u32, u32) -> ()
+glGetTransformFeedbackVarying(u32, u32, i32, u32, u32, u32, u32) -> ()
+glGetUniformBlockIndex(u32, u32) -> (u32)
+glGetUniformIndices(u32, i32, u32, u32) -> ()
 glGetUniformLocation(u32, u32) -> (i32)
 glGetUniformfv(u32, i32, u32) -> ()
 glGetUniformiv(u32, i32, u32) -> ()
+glGetUniformuiv(u32, i32, u32) -> ()
+glGetVertexAttribIiv(u32, u32, u32) -> ()
+glGetVertexAttribIuiv(u32, u32, u32) -> ()
 glGetVertexAttribPointerv(u32, u32, u32) -> ()
 glGetVertexAttribfv(u32, u32, u32) -> ()
 glGetVertexAttribiv(u32, u32, u32) -> ()
 glHint(u32, u32) -> ()
+glInvalidateFramebuffer(u32, i32, u32) -> ()
+glInvalidateSubFramebuffer(u32, i32, u32, i32, i32, i32, i32) -> ()
 glIsBuffer(u32) -> (u32)
 glIsEnabled(u32) -> (u32)
 glIsFramebuffer(u32) -> (u32)
 glIsProgram(u32) -> (u32)
+glIsQuery(u32) -> (u32)
 glIsRenderbuffer(u32) -> (u32)
+glIsSampler(u32) -> (u32)
 glIsShader(u32) -> (u32)
+glIsSync(u32) -> (u32)
 glIsTexture(u32) -> (u32)
+glIsTransformFeedback(u32) -> (u32)
+glIsVertexArray(u32) -> (u32)
 glIsVertexArrayOES(u32) -> (u32)
 glLineWidth(f32) -> ()
 glLinkProgram(u32) -> ()
+glMapBufferRange(u32, i32, i32, u32) -> (u32)
+glPauseTransformFeedback() -> ()
 glPixelStorei(u32, i32) -> ()
 glPolygonOffset(f32, f32) -> ()
+glProgramBinary(u32, u32, u32, i32) -> ()
+glProgramParameteri(u32, u32, i32) -> ()
+glReadBuffer(u32) -> ()
 glReadPixels(i32, i32, i32, i32, u32, u32, u32) -> ()
 glReleaseShaderCompiler() -> ()
 glRenderbufferStorage(u32, u32, i32, i32) -> ()
+glRenderbufferStorageMultisample(u32, i32, u32, i32, i32) -> ()
+glResumeTransformFeedback() -> ()
 glSampleCoverage(f32, u32) -> ()
+glSamplerParameterf(u32, u32, f32) -> ()
+glSamplerParameterfv(u32, u32, u32) -> ()
+glSamplerParameteri(u32, u32, i32) -> ()
+glSamplerParameteriv(u32, u32, u32) -> ()
 glScissor(i32, i32, i32, i32) -> ()
 glShaderBinary(i32, u32, u32, u32, i32) -> ()
 glShaderSource(u32, i32, u32, u32) -> ()
@@ -110,30 +185,51 @@ glStencilMaskSeparate(u32, u32) -> ()
 glStencilOp(u32, u32, u32) -> ()
 glStencilOpSeparate(u32, u32, u32, u32) -> ()
 glTexImage2D(u32, i32, i32, i32, i32, i32, u32, u32, u32) -> ()
+glTexImage3D(u32, i32, i32, i32, i32, i32, i32, u32, u32, u32) -> ()
 glTexParameterf(u32, u32, f32) -> ()
 glTexParameterfv(u32, u32, u32) -> ()
 glTexParameteri(u32, u32, i32) -> ()
 glTexParameteriv(u32, u32, u32) -> ()
+glTexStorage2D(u32, i32, u32, i32, i32) -> ()
+glTexStorage3D(u32, i32, u32, i32, i32, i32) -> ()
 glTexSubImage2D(u32, i32, i32, i32, i32, i32, u32, u32, u32) -> ()
+glTexSubImage3D(u32, i32, i32, i32, i32, i32, i32, i32, u32, u32, u32) -> ()
+glTransformFeedbackVaryings(u32, i32, u32, u32) -> ()
 glUniform1f(i32, f32) -> ()
 glUniform1fv(i32, i32, u32) -> ()
 glUniform1i(i32, i32) -> ()
 glUniform1iv(i32, i32, u32) -> ()
+glUniform1ui(i32, u32) -> ()
+glUniform1uiv(i32, i32, u32) -> ()
 glUniform2f(i32, f32, f32) -> ()
 glUniform2fv(i32, i32, u32) -> ()
 glUniform2i(i32, i32, i32) -> ()
 glUniform2iv(i32, i32, u32) -> ()
+glUniform2ui(i32, u32, u32) -> ()
+glUniform2uiv(i32, i32, u32) -> ()
 glUniform3f(i32, f32, f32, f32) -> ()
 glUniform3fv(i32, i32, u32) -> ()
 glUniform3i(i32, i32, i32, i32) -> ()
 glUniform3iv(i32, i32, u32) -> ()
+glUniform3ui(i32, u32, u32, u32) -> ()
+glUniform3uiv(i32, i32, u32) -> ()
 glUniform4f(i32, f32, f32, f32, f32) -> ()
 glUniform4fv(i32, i32, u32) -> ()
 glUniform4i(i32, i32, i32, i32, i32) -> ()
 glUniform4iv(i32, i32, u32) -> ()
+glUniform4ui(i32, u32, u32, u32, u32) -> ()
+glUniform4uiv(i32, i32, u32) -> ()
+glUniformBlockBinding(u32, u32, u32) -> ()
 glUniformMatrix2fv(i32, i32, u32, u32) -> ()
+glUniformMatrix2x3fv(i32, i32, u32, u32) -> ()
+glUniformMatrix2x4fv(i32, i32, u32, u32) -> ()
 glUniformMatrix3fv(i32, i32, u32, u32) -> ()
+glUniformMatrix3x2fv(i32, i32, u32, u32) -> ()
+glUniformMatrix3x4fv(i32, i32, u32, u32) -> ()
 glUniformMatrix4fv(i32, i32, u32, u32) -> ()
+glUniformMatrix4x2fv(i32, i32, u32, u32) -> ()
+glUniformMatrix4x3fv(i32, i32, u32, u32) -> ()
+glUnmapBuffer(u32) -> (u32)
 glUseProgram(u32) -> ()
 glValidateProgram(u32) -> ()
 glVertexAttrib1f(u32, f32) -> ()
@@ -144,5 +240,12 @@ glVertexAttrib3f(u32, f32, f32, f32) -> ()
 glVertexAttrib3fv(u32, u32) -> ()
 glVertexAttrib4f(u32, f32, f32, f32, f32) -> ()
 glVertexAttrib4fv(u32, u32) -> ()
+glVertexAttribDivisor(u32, u32) -> ()
+glVertexAttribI4i(u32, i32, i32, i32, i32) -> ()
+glVertexAttribI4iv(u32, u32) -> ()
+glVertexAttribI4ui(u32, u32, u32, u32, u32) -> ()
+glVertexAttribI4uiv(u32, u32) -> ()
+glVertexAttribIPointer(u32, i32, u32, i32, u32) -> ()
 glVertexAttribPointer(u32, i32, u32, u32, i32, u32) -> ()
 glViewport(i32, i32, i32, i32) -> ()
+glWaitSync(u32, u32, u64) -> ()
